# GumboSoup

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: publish.yml  test.yml
gumbo-query/: CMakeLists.txt  CONTROL  FindGumbo.cmake  portfile.cmake
gumbo-query/src/: CMakeLists.txt
ports/sigil-gumbo/: CMakeLists.txt  CONTROL  portfile.cmake
scripts/: make-gumbo.sh
src/commonMain/kotlin/nl/blackstardlb/gumbosoup/: CommentGSNode.kt  DocumentGSNode.kt  ElementGSNode.kt  GSNode.kt  KumboParser.kt  TextGSNode.kt
src/commonMain/kotlin/nl/blackstardlb/kumbo/: CommentGSNode.kt  DocumentGSNode.kt  ElementGSNode.kt  GSNode.kt  KumboParser.kt  Node.kt  NodeFunctions.kt  TextGSNode.kt
src/commonTest/kotlin/nl/blackstardlb/gumbosoup/: KumboParser.kt  ResourceLoader.kt
src/commonTest/kotlin/nl/blackstardlb/kumbo/: KumboParser.kt  ResourceLoader.kt
src/commonTest/resources/: signin.html
src/iosArm64Main/kotlin/nl/blackstardlb/kumbo/: NativeParser.kt
src/jvmMain/kotlin/nl/blackstardlb/gumbosoup/: JsoupParser.kt  parseHtml.kt
src/jvmMain/kotlin/nl/blackstardlb/kumbo/: JsoupHelper.kt  JsoupParser.kt  parseHtml.kt
src/jvmTest/kotlin/nl/blackstardlb/gumbosoup/: ResourceLoader.kt
src/jvmTest/kotlin/nl/blackstardlb/kumbo/: ResourceLoader.kt
src/nativeInterop/cinterop/: gumbo.def
src/nativeMain/kotlin/nl/blackstardlb/gumbosoup/: GumboParser.kt  parseHtml.kt
src/nativeMain/kotlin/nl/blackstardlb/kumbo/: Gumbo.kt  GumboParser.kt  NativeParser.kt  parseHtml.kt
(+2 files in other folders)
